
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ Tnvram ;
 int getpid () ;
 int snprint (char*,int,char*,int ) ;
 int stealfile (char*) ;
 scalar_t__ target ;

__attribute__((used)) static int
steal(void)
{
 char buffer[32];

 if(target == Tnvram)
  return stealfile("#S/sdC0/nvram");

 snprint(buffer, sizeof buffer, "#p/%d/mem", getpid());

 return stealfile(buffer);
}
